# rattr

./: .gitignore  LICENSE  README.md  mkvenv  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  staticanalysis.yml  tests.yml
ratter/: __init__.py  __main__.py  version.py
ratter/analyser/: annotations.py  base.py  cls.py  file.py  function.py  ir_dag.py  results.py  types.py  util.py
ratter/cache/: __init__.py  cache.py  util.py
ratter/cli/: __init__.py  parser.py  util.py
ratter/config/: __init__.py
ratter/error/: __init__.py  error.py
ratter/plugins/: __init__.py
rattr/: __init__.py  __main__.py  _version.py
rattr/analyser/: annotations.py  base.py  cls.py  exc.py  file.py  function.py  ir_dag.py  results.py  types.py  util.py
rattr/ast/: __init__.py  _util.py  place.py  types.py  util.py
rattr/cli/: __init__.py  _argparse.py  _arguments.py  _types.py  _util.py  _validate.py  arg_parser.py  argparse.py  exit_codes.py  parser.py  toml.py  toml_parser.py  util.py
rattr/codegen/: __init__.py  util.py
rattr/config/: __init__.py  _types.py  _util.py  state.py  util.py
rattr/error/: __init__.py  error.py  exc.py
rattr/extra/: __init__.py  _dict_changes.py  functools.py
rattr/models/: ir.py  plugins.py  types.py  util.py
rattr/module_locator/: _locate.py  exc.py  models.py  types.py  util.py
rattr/plugins/: __init__.py
rattr/results/: __init__.py  _find_call_target.py  _simplify_utils.py  util.py
rattr/versioning/: __init__.py  _types.py  _util.py  typing.py
tests/: conftest.py  helpers.py  shared.py  test_analysers.py  test_base.py  test_bin.py  test_cache.py  test_cls.py  test_error.py  test_file.py  test_function.py  test_ir_dag.py  test_parser.py  test_ratter.py  test_rattr.py  test_regressions.py  test_results.py  test_util.py
tests/analyser/: test_annotations.py  test_snippets.py
tests/assertors/: test_import_clobbering.py
tests/ast/: test_ast_place.py  test_ast_util.py
(+110 files in other folders)
